--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jul-fls/Atelier-BigData-Epsi#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "gtfs": "^4.5.1",
     "gtfs-realtime": "^0.2.0"
   }
